--- a/aula04/trabalho04/pages/noticias.html
+++ b/aula04/trabalho04/pages/noticias.html
@@ -17,25 +17,27 @@
             <ul>
                 <li><a href="galeria.html">Galeria</a></li>
                 <li><a href="noticias.html">Notícias</a></li>
-                <li><a href="youtube    .html">Youtube</a></li>
+                <li><a href="youtube.html">Youtube</a></li>
                 <li><a href="twitter.html">Twitter</a></li>
             </ul>
         </nav>
     </header>
 
+    <h1>Notícias</h1>
+
     <div class="principal-container">
         <div class="flex-top-container">
             <div>
                 <img src="../../images/dog2.jpeg" alt="">
-                <p>Noticia1</p>
+                <p>meliante</p>
             </div>
             <div>
                 <img src="../../images/dog3.jpeg" alt="">
-                <p>Noticia2</p>
+                <p>Comparsa</p>
             </div>
             <div>
                 <img src="../../images/dog4.jpeg" alt="">
-                <p>Noticia3</p>
+                <p>Vulgo dadinho</p>
             </div>
         </div>
 
@@ -44,39 +46,41 @@
             <div class="ads">
                 <div>
                     <img src="../../images/dog5.jpeg" alt="dog-image">
-                    <p>propaganda</p>
+                    <p>Mandante do crime</p>
                 </div>
             </div>
 
             <div class="cards">
                 <div>
-                    <img src="../../images/dog1.jpeg" alt="">
-                    <p>Bermudas</p>
+
+                    <img src="../../images/dog1.jpeg" alt="dog1">
+                    <p>Foragido</p>
+
                 </div>
 
                 <div>
-                    <img src="../../images/dog2.jpeg" alt="">
-                    <p>Bermudas</p>
+                    <img src="../../images/dog2.jpeg" alt="dog2">
+                    <p>Foragido</p>
                 </div>
 
                 <div>
-                    <img src="../../images/dog3.jpeg" alt="">
-                    <p>Bermudas</p>
+                    <img src="../../images/dog3.jpeg" alt="dog3">
+                    <p>Foragido</p>
                 </div>
 
                 <div>
-                    <img src="../../images/dog4.jpeg" alt="">
-                    <p>Bermudas</p>
+                    <img src="../../images/dog4.jpeg" alt="dog4">
+                    <p>Foragido</p>
                 </div>
 
                 <div>
-                    <img src="../../images/dog5.jpeg" alt="">
-                    <p>Bermudas</p>
+                    <img src="../../images/dog5.jpeg" alt="dog5">
+                    <p>Foragido</p>
                 </div>
-                
+
                 <div>
                     <img src="../../images/dog6.jpeg" alt="">
-                    <p>Bermudas</p>
+                    <p>Foragido</p>
                 </div>
             </div>
         </div>
