--- a/html - css/aula04/trabalho04/pages/noticias.html
+++ b/html - css/aula04/trabalho04/pages/noticias.html
@@ -28,15 +28,15 @@
     <div class="principal-container">
         <div class="flex-top-container">
             <div>
-                <img src="../../images/dog2.jpeg" alt="">
+                <img src="../../images/dog2.jpeg" alt="dog">
                 <p>meliante</p>
             </div>
             <div>
-                <img src="../../images/dog3.jpeg" alt="">
+                <img src="../../images/dog3.jpeg" alt="dog">
                 <p>Comparsa</p>
             </div>
             <div>
-                <img src="../../images/dog4.jpeg" alt="">
+                <img src="../../images/dog4.jpeg" alt="dog">
                 <p>Vulgo dadinho</p>
             </div>
         </div>
