--- a/jasvascript/aula01/ex01/index.html
+++ b/jasvascript/aula01/ex01/index.html
@@ -8,7 +8,7 @@
     <!-- Script file -->
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="index.css" rel="stylesheet">
+    <!-- <link href="index.css" rel="stylesheet"> -->
     <!-- Icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
@@ -17,6 +17,8 @@
         <button class="my-btn" id="btn-1">Botão 1</button>
         <button class="my-btn" id="btn-2">Botão 2</button>
     </div>
+
+    
 
     <script src='sintax.js'></script>
 </body>
