Ajuste nos resultados

--- a/jasvascript/aula07/homework/index.html
+++ b/jasvascript/aula07/homework/index.html
@@ -15,6 +15,7 @@
         <div class="titles">
             <h1>Jogo da Velha</h1>
             <button>Iniciar</button>
+            <div class="vencedor"></div>
         </div>
        
         <div class="jogo-da-velha">
