--- a/jasvascript/aula08/index.html
+++ b/jasvascript/aula08/index.html
@@ -40,7 +40,8 @@
             </div>
         </form>
     </div>
-
+    
+    <script src="./node_modules/axios/dist/axios.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js" type="text/javascript"></script>
     <script src="script.js"></script>
 </body>
