--- a/jasvascript/aula09/index.html
+++ b/jasvascript/aula09/index.html
@@ -38,6 +38,12 @@
             </div>
 
             <div class="p-3 d-flex flex-column">
+                <span>Nome*</span>
+                <input id="name-input-registration" onkeyup="validarNome()" maxlength="32">
+                <span id="name-registration-error" class="d-none">Nome inválido</span>
+            </div>
+
+            <div class="p-3 d-flex flex-column">
                 <span>Data de Nascimento*</span>
                 <input id="date-input-registration" onkeyup="validarData()" maxlength="10">
                 <span id="date-registration-error" class="d-none">Data inválida</span>
